--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title id="titleText">National Park Quiz</title>
+	<title>National Park Quiz</title>
 	<link rel="stylesheet" href="reset.css"/>
 	<link rel="stylesheet" href="main.css"/> 
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
